# super-kb

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  USERGUIDE.md  install.ps1  install.sh  pyproject.toml  server.py  uninstall.ps1  uninstall.sh
.claude/: CLAUDE-skb.md
.claude/skills/docs-sync/: SKILL.md
.claude/skills/review-plan/: SKILL.md
.claude/skills/skb/: SKILL.md
.cline/skills/clean-room-smoke/: SKILL.md
.cline/skills/packaging-release/: SKILL.md
.cline/skills/run-checks/: SKILL.md
.cline/skills/skb/: SKILL.md
.clinerules/: 01-workflow.md  10-python-runtime.md  20-packaging-and-docs.md
.codex/skills/implement-feature/: SKILL.md
.codex/skills/mcp-tooling/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agent-skills/: skills.toml
agent-skills/clean-room-smoke/: body.md
agent-skills/docs-sync/: body.md
agent-skills/implement-feature/: body.md
agent-skills/mcp-tooling/: body.md
agent-skills/packaging-release/: body.md
agent-skills/review-plan/: body.md
agent-skills/run-checks/: body.md
agent-skills/skb/: body.md
docs/: AGENTIC_CODING_SETUP_PLAN.md
packaging/: pyinstaller.spec
sample/claude-config/: CLAUDE.md  SETUP.md
sample/claude-config/commands/: skb.md
sample/claude-config/skills/skb/: SKILL.md
sample/java-project/: .mcp.json  README.md
scripts/: build_binary.py  pyinstaller_entry.py  sync_agent_skills.py
skb/: __init__.py  __main__.py  cli.py  config.py  embeddings.py  ingest.py  mcp_config.py  portability.py  provisioning.py  reranker.py  server.py  store.py  sync.py  tools.py
skb/chunkers/: __init__.py  code.py  markdown.py  pdf.py  text.py
tests/: test_build_install.py  test_cli.py  test_embeddings.py  test_indexing_search.py  test_provisioning.py  test_uninstall_scripts.py
