[project]
name = "skb-mcp-server"
version = "0.1.0"
description = "Super Knowledge Base MCP server for Claude Code"
requires-python = ">=3.12,<3.14"
dependencies = [
    "mcp[cli]>=1.26",
    "chromadb>=1.0",
    "pypdf>=5.0",
    "flashrank>=0.2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skb"]
