[project]
name = "skb-mcp-server"
version = "0.2.2"
description = "Super Knowledge Base MCP server for Claude Code"
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "mcp[cli]>=1.26",
    "chromadb>=1.0",
    "pypdf>=5.0",
    "flashrank>=0.2.10",
]

[project.scripts]
skb-mcp-server = "skb.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skb"]
include = [
    "skb/templates/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "skb/**",
    "sample/**",
    "tests/**",
    "README.md",
    "USERGUIDE.md",
]
